Fix alignment of folder view controls

--- a/src/app/core/components/nav/nav.component.scss
+++ b/src/app/core/components/nav/nav.component.scss
@@ -83,7 +83,7 @@ nav.navbar {
   @include after($tablet-horizontal) {
     min-height: $breadcrumb-height-desktop;
     padding-left: 2 * $grid-unit;
-    padding-right: $grid-unit;
+    // padding-right: $grid-unit;
     // border-bottom: 1px solid $gray-300;
     box-shadow: none;
     .sidebar-align {
@@ -97,6 +97,7 @@ nav.navbar {
     pr-folder-view-toggle {
       display: flex;
       align-items: center;
+      margin-right: 2 * $grid-unit;
     }
   }
 }
